--- a/index.html
+++ b/index.html
@@ -1,21 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Frankline Training</title>
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <style>
+  .form-control {
+    margin-bottom: 10px;
+  }
+  .btn-danger {
+    margin-top: 8px;
+  }
+  </style>
 </head>
+<header id="masthead">
+
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark border">
+        <a class="navbar-brand" href="/"><h1>Add or Delete Events</h1>
+        </a>
+        <button aria-controls="navbar" aria-expanded="true" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar">
+                <ul class="navbar-nav mr-auto mt-2">
+                    <li class="nav-item"><a class="nav-link" href="/">Add Events</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/">Delete Event</a></li>
+               <form class="form-inline my-2 my-lg-0" method="get" action="https://www.google.com/maps/search/events">
+                    <input class="form-control mr-sm-2" type="search" name = "q" placeholder="Search Events" aria-label="Search">
+                    <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
+                </form>
+               
+        </div>
+    </nav>
+     </header>
 <body>
-    <h1>About "me<h1>
-    <h1>Franline kebei</h1>
-    <p>I am 37 years old, a father of 4, (3 girls Queen 13, Aliya 7, Honey 4 and 1 boy, Hope-Mario 10)</p>
-    <p>I am from cameroon, west africa,have lived all over the world</p>
-   <p>I have associate in maketing from the university of Buea</p>
-   <P>Growing up i always has interest in information and technology</P>
-   <p>I am very happy to have this opportunity to be part of this bootcamp</p>
-   <P>Looking forward to be part of this wonderful Team, and make some new friendsS</P>
+  <br><br>
+<hr>
+<div class="container">
+  
+
+  <div class="container" id="events">
+    <div class="col-sm-7">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3  class="btn btn-primary">Add or Delete an Event</h3>
+        </div>
+        <div class="panel-body">
+          <div>
+            <input class="form-control" placeholder="Title" v-model="event.title">
+            <textarea class="form-control" placeholder="Detail" v-model="event.detail"></textarea>
+            <input type="date" class="form-control" placeholder="Date" v-model="event.date">
+            <button class="btn btn-primary" v-on:click="addEvent">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-5">
+      <div class="list-group">
+        <a href="#" class="list-group-item" v-for="event in events">
+          <h4 class="list-group-item-heading"><i class="glyphicon glyphicon-bullhorn"></i> {{ event.title }}</h4>
+          <h5><i class="glyphicon glyphicon-calendar" v-if="event.date"></i> {{ event.date }}</h5>
+          <p class="list-group-item-text" v-if="event.detail">{{ event.detail }}</p>
+          <button class="btn btn-xs btn-danger" v-on:click="deleteEvent(event.id)">Delete</button>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
 
 </body>
+<script src="node_modules/vue/dist/vue.min.js"></script>
+<script src="node_modules/vue-resource/dist/vue-resource.min.js"></script>
+<script src="app.js"></script>
+<br>
+<hr>
+<footer>
+       <div class="container">
+       <h5><b>Copyright 2019 &copy;</b></h5>
+        || <a href="www.facebook.com"><b>Facebook</b></a> ||
+        <a href="www.instagram.com"><b>Instagram</b></a> || <a href="www.twitter.com"><b>Twitter</b></a> ||
+        <a href="https://github.com/temkebei"><b>GitHub</b></a> ||
+        <a href="https://www.linkedin.com/in/franklinekebei/"><b>Linkedin</b></a></a> ||
+        
+    </div>
+    <br>
+        </footer>
 </html>
